--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Dynamic Editor Module",
   "typings":"./dist/dynamic-editor.d.ts",
   "scripts": {
-    "build": "npx tsc -p configs/tsconfig.json & npx api-extractor run --config=configs/api-extractor.json --local & powershell Remove-Item -Recurse -Force \".bin\"",
-    "watch": "powershell ./scripts/watch"
+    "build": "npx tsc -p configs/tsconfig.json & node ./scripts/webpack.js configs/webpack.json & npx api-extractor run --config=configs/api-extractor.json --local & powershell Remove-Item -Recurse -Force \".bin\"",
+    "watch": "powershell -ExecutionPolicy ByPass -File ./scripts/watch.ps1",
+    "init": "npm i & npx tsc & powershell Start-Process -FilePath \"regolith\" -ArgumentList \"run\" -PassThru -NoNewWindow -WorkingDirectory ./configs & npm run build"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,8 @@
   "homepage": "https://github.com/Bedrock-APIs/based-editor#readme",
   "dependencies": {
     "@microsoft/api-extractor": "^7.38.0",
-    "@minecraft/server": "beta"
+    "@minecraft/server": "beta",
+    "@minecraft/server-editor": "beta",
+    "webpack":"^5.88.1"
   }
 }
