--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
         "skipLibCheck": true
     },
     "exclude": ["./node_modules"],
-    "include": ["./src/**/*"]
+    "include": ["./src/"]
 }
