--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   },
   "homepage": "https://github.com/Bedrock-APIs/based-editor#readme",
   "dependencies": {
-    "@minecraft/server": "beta",
-    "@minecraft/server-editor": "beta",
+    "@minecraft/server": "^1.10.0-beta.1.20.70-preview.25",
+    "@minecraft/server-editor": "^0.1.0-beta.1.20.70-preview.25",
     "dts-bundle-generator": "^8.1.0",
     "ts-loader": "^9.5.0",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
